<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming_event">Event Mendatang</string>
    <string name="title_finish_event">Event Selesai</string>
    <string name="title_favorite_event">Event Tersimpan</string>
    <string name="title_setting">Pengaturan</string>

    <!-- Content Desc Photo -->
    <string name="img_event">Foto Event</string>
    <string name="img_cover">Foto Cover"</string>
    <string name="img_favorite">Ikon Favorit</string>

    <!-- DetailEvent -->
    <string name="category_event">Kategori</string>
    <string name="name_event">Nama Event</string>
    <string name="owner_name_event">Penyelenggara Event</string>
    <string name="summary_event">Deskripsi Event</string>
    <string name="left_quota">Sisa Kuota</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_event">Waktu Pelaksanaan: </string>
    <string name="time_start">Waktu Mulai</string>
    <string name="time_end">Waktu Selesai</string>
    <string name="text_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce id mauris rhoncus sem porttitor vehicula eu nec nibh. Integer nisl magna, auctor sit amet lacus id, fermentum vehicula augue</string>

    <!-- Tombol -->
    <string name="btn_regis">Daftar</string>
    <string name="dark_mode">Mode Gelap</string>

</resources>