<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_event_event_available"
        android:icon="@drawable/ic_event_available"
        android:title="@string/title_upcoming_event" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_event_finish"
        android:icon="@drawable/ic_event_finish"
        android:title="@string/title_finish_event" />

    <item
        android:id="@+id/navigation_favorite_event"
        android:icon="@drawable/ic_save"
        android:title="@string/title_favorite_event" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/title_setting" />
</menu>