<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wahyu.dicodingevent.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_event_event_available"
        android:name="com.wahyu.dicodingevent.ui.ActiveEventFragment"
        android:label="@string/title_upcoming_event"/>

    <fragment
        android:id="@+id/navigation_event_finish"
        android:name="com.wahyu.dicodingevent.ui.CompletedEventFragment"
        android:label="@string/title_finish_event"
        tools:layout="@layout/fragment_list_event" />

    <fragment
        android:id="@+id/navigation_favorite_event"
        android:name="com.wahyu.dicodingevent.ui.FavoriteEventFragment"
        android:label="@string/title_favorite_event"
        tools:layout="@layout/fragment_list_event" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.wahyu.dicodingevent.ui.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>