<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/card_view2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.CompletedEventFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/md_theme_primaryContainer">

        <ImageView
            android:id="@+id/img_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:contentDescription="@string/img_event"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/md_theme_secondary"
            app:layout_constraintTop_toBottomOf="@id/img_event"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tv_category_event"
                style="@style/text_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_event"
                android:padding="8dp"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_name_event"
            style="@style/text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name_event"
            app:layout_constraintTop_toBottomOf="@id/card_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/tv_owner_name_event"
            style="@style/text_owner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_name_event"
            app:layout_constraintTop_toBottomOf="@id/tv_name_event"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <TextView
            android:id="@+id/tv_summary_event"
            style="@style/text_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/summary_event"
            app:layout_constraintTop_toBottomOf="@id/tv_owner_name_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingBottom="12dp"/>

        <TextView
            android:id="@+id/tv_left_quota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/left_quota"
            style="@style/text_left_quota"
            app:layout_constraintTop_toBottomOf="@id/tv_summary_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/time_left" />


        <TextView
            android:id="@+id/time_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time_event"
            style="@style/text_left_quota"
            android:gravity="end"
            app:layout_constraintTop_toBottomOf="@id/tv_summary_event"
            app:layout_constraintStart_toEndOf="@id/tv_left_quota"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
