<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailEventActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/img_cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_cover"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/card_category"
            tools:srcCompat="@tools:sample/backgrounds/scenic"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/md_theme_surface"
            app:layout_constraintTop_toBottomOf="@id/img_cover"
            app:layout_constraintBottom_toTopOf="@id/card_category"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="48dp">
            <ImageView
                android:id="@+id/img_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_favorite"
                android:src="@drawable/ic_favorite_border"
                android:padding="12dp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/md_theme_secondary"
            app:layout_constraintTop_toBottomOf="@id/img_cover"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/tv_category_event"
                style="@style/text_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_event"
                android:padding="8dp"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_name_event"
            style="@style/text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name_event"
            android:textColor="@color/md_theme_primary"
            app:layout_constraintTop_toBottomOf="@id/card_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="32sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/tv_owner_name_event"
            style="@style/text_owner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_name_event"
            android:textSize="12sp"
            android:textColor="@color/md_theme_secondary"
            app:layout_constraintTop_toBottomOf="@id/tv_name_event"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"/>

        <TextView
            android:id="@+id/time_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_owner_name_event"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            style="@style/time_event"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/time_event"/>

        <TextView
            android:id="@+id/time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/time_event"
            android:fontFamily="@font/quicksand_bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/time_start"
            app:layout_constraintTop_toBottomOf="@id/tv_owner_name_event"
            app:layout_constraintStart_toEndOf="@id/time_event"/>

        <TextView
            android:id="@+id/time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            style="@style/time_event"
            android:layout_marginStart="8dp"
            android:text="@string/time_start"
            app:layout_constraintTop_toBottomOf="@id/time_start"
            app:layout_constraintStart_toEndOf="@id/time_event"/>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_regis"
            app:layout_constraintTop_toBottomOf="@id/time_end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_left_quota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_left_quota"
            android:text="@string/left_quota"
            android:background="@android:color/transparent"
            android:textColor="@color/md_theme_primary"
            app:layout_constraintTop_toBottomOf="@id/btnSend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_left_quota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/summary_event"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="@color/md_theme_primary"
            android:textSize="18sp"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/tv_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/text_description"
            android:fontFamily="@font/quicksand_light"
            android:textColor="@color/md_theme_primary"
            android:textSize="16sp"
            android:padding="8dp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>